src/sections/experiences/experiences.css
.animate-charcter {
    text-transform: uppercase;
    background-image: linear-gradient(-225deg,
            var(--color-black) 0%,
            var(--color-dark) 29%,
            var(--color-primary) 67%,
            var(--color-light) 100%);
    background-size: auto auto;
    background-clip: border-box;
    background-size: 200% auto;
    color: #fff;
    background-clip: text;
    text-fill-color: transparent;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: textclip 6s linear infinite;
    display: inline-block;
    font-size: 16px;
}

@keyframes textclip {
    to {
        background-position: 200% center;
    }
}




.experiences__container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 2rem 4rem;
}

.card.experience {
    display: flex;
    align-items: flex-start;
    gap: 1rem;
}

.experience__icon {
    background: var(--color-primary);
    padding: 0.6rem;
    border-radius: var(--border-radius-3);
    font-size: 1.5rem;
    color: var(--color-white);
    transition: var(--transition);
}

.experience:hover .experience__icon {
    background: var(--color-light);
    color: var(--color-primary);
}

.experience h4 {
    margin-bottom: 0.7rem;
}

.jobHeaderContainer {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.jobNameContainer {
    /* display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start; */
    text-align: start;
}

.jobDuration {
    /* display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: end; */
    text-align: end;
}

.jobName {
    font-size: 16px;
    font-weight: bolder;
}

.companyName {
    font-size: 14px;
    font-weight: bold;
}

/* MEDIA QUERIES (tablets) */
@media screen and (max-width: 1024px) {
    .experiences__container {
        gap: 1.5rem;
    }
}


/* MEDIA QUERIES (phones) */
@media screen and (max-width: 600px) {
    .experiences__container {
        grid-template-columns: 1fr;
        gap: 1.2rem;
    }

    .card.experience {
        gap: 1.2rem;
    }


}


/* Extra large devices (laptops and desktops, 1200px and down) */
@media only screen and (max-width: 1200px) {
    .jobHeaderContainer {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: start;
    }

    .jobDuration {
        text-align: start;
    }

}

